Landing Page Fix and Aligned CSS With proper header fix

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,8 @@
     
 }
 .header{
+    position: fixed;
+    width: 100%;
     background-color: #1F2937;
     display: flex;
     justify-content: space-between;
@@ -12,7 +14,6 @@
     padding:5px;
     
 }
-
 .header img{
     box-sizing: content-box;
     width:70px;
@@ -22,7 +23,6 @@
     padding: 10px 20px;
    
 }
-
 .header ul{
     list-style: none;
     display: flex;
@@ -40,11 +40,20 @@
     color:#E5E7EB;
 }
 
- .text-container{
+.container{
     display: flex;
+    justify-content: space-around;
+    background-color: #1F2937;
+    align-items: center;
+
+}
+
+ .text-container{
+    display: flex; 
+    flex-wrap: wrap; 
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
+    align-items:flex-start;
     width: 350px;
     margin-left:100px ;
 }
@@ -57,29 +66,135 @@
 }
 
 .secondary-text{
+    flex: 1;
     color: #E5E7EB;
     font-size: 20px;
-    width: 450px;
+    width: 100%;
     
 }
-
-.container{
-    display: flex;
-    justify-content: space-around;
-    background-color: #1F2937;
-}
-
 .box-img{
     height: 500px;
-    margin: 0;
-    padding: 0;
+    margin-top: 75px;
+    padding: 10px;
 }
 
 .button{
-    border:none;
     border-radius:10px;
     background-color: #3882F6;
     width:100px;
     height: 35px;
     margin-top: 35px;
+    color: #E5E7EB;
+    text-align: center;
+    font-weight: bold;
+    font-size: 15px;
+}
+
+.info-title{
+    display: flex;
+    justify-content: center;
+    font-size: 36px;
+    font-weight: bolder;
+    color:#1F2937;
+    margin:50px;
+}
+
+.info-container{
+    display: flex;
+    gap:40px;
+    justify-content:center;
+   align-items: center;
+   flex-shrink: 0;
+   margin-bottom: 100px;
+}
+
+.info-item{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    width: 150px;
+    height:150px;
+    text-align: center;
+    color: #1F2937;
+}
+
+.placeholder img{
+    width: 150px;
+    height:150px;
+    border: 2px solid #3882F6;
+    border-radius: 12px;
+    
+}
+.quote-container{
+    background-color: #E5E7EB;
+    padding:100px 100px;
+    display: flex;
+    flex-direction: column;
+   
+}
+.cols{
+    display: flex;
+    gap:100px;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.quote-item{
+    font-size: 36px;
+    font-style:italic;
+    font-weight: light;
+    padding:20px;
+}
+
+.quote-author{
+    font-weight:bold;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.action{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    background-color: #3882F6;
+    border-radius:12px;
+    margin: 100px 100px;
+    padding:50px;
+    color: #E5E7EB;
+    
+}
+
+.action-text{
+    font-weight: 900;
+    font-size: 36px;
+}
+
+
+.action .button{
+    margin:0;
+    border:2px solid #E5E7EB;
+}
+
+.footer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap:300px;
+    padding-right: 350px;
+    background-color: #1F2937;
+    width: 100%;
+    height: 75px;
+    
+}
+
+
+.footer  img{
+    background-color: #E5E7EB;
+    
+}
+
+.copyright{
+    color: #E5E7EB;
 }
